# bgnormPy

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: build-image.yml
containers/: Dockerfile
containers/apptainer/: bgnorm.def
src/: __init__.py  core.py  sdata.py
src/bgnorm/: __init__.py  core.py  io.py  plotting.py  sdata.py  tracking.py
