[project]
name = "bgnorm"
version = "0.1.0"
description = "Python implementation of the bgnorm method."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2026.6.0",
    "dask-image>=2026.5.0",
    "numpy>=2.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "xarray>=2026.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]